
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haystack-pipeline-architect"
version = "0.1.0"
description = "Turn composable retrieval and generation pipelines into a product-grade architecture surface with routing, testing, and pipeline observability."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
